<?xml version="1.0"?>
<package format="3">
  <name>sentinel_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Sentinel ROS2 system</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>video_rx_pkg2</exec_depend>
  <exec_depend>yolo_detector_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
