<?xml version="1.0"?>
<package format="3">
  <name>video_rx_pkg</name>
  <version>0.0.1</version>
  <description>Video file reader and frame publisher node</description>

  <maintainer email="you@example.com">lig</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sentinel_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>